fixed some layout issues

--- a/src/Components/ProjectSection/index.module.css
+++ b/src/Components/ProjectSection/index.module.css
@@ -111,14 +111,7 @@
     }
 
     .projectDescriptionTooltip {
-        display: none;
-        opacity: 0;
-        width: 75%;
-        font-family: 'Roboto Slab', serif;
         font-size: 1rem;
-        padding: 15px;
-        border-radius: 20px;
-        text-align: left;
     }
 }
 
